完善请求的细节
